{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 17,
  "lineage": "26dab70c-ba0f-4ced-a1fb-9f5483e54d8b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jay_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:925068267029:instance/i-0618d45f4bd6e2381",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0618d45f4bd6e2381",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jaykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c5ac7c5321158ac9",
            "private_dns": "ip-10-0-1-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-54-152-12-34.compute-1.amazonaws.com",
            "public_ip": "54.152.12.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f26791d7a0c4aebe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002a364435308a614",
            "tags": {
              "Name": "First Instance"
            },
            "tags_all": {
              "Name": "First Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d10e2082959a8e4e"
            ]
          },
          "dependencies": [
            "aws_key_pair.jay-key",
            "aws_security_group.jay-sg1",
            "aws_subnet.jay-pub-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jay-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925068267029:internet-gateway/igw-0f6c32e90f40769e4",
            "id": "igw-0f6c32e90f40769e4",
            "owner_id": "925068267029",
            "tags": {
              "Name": "jay-IGW"
            },
            "tags_all": {
              "Name": "jay-IGW"
            },
            "vpc_id": "vpc-00ccf715d9ad6ced1"
          },
          "dependencies": [
            "aws_vpc.jay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jay-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925068267029:route-table/rtb-0632294a5ab0b00d3",
            "id": "rtb-0632294a5ab0b00d3",
            "owner_id": "925068267029",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6c32e90f40769e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jay-pub-RT"
            },
            "tags_all": {
              "Name": "jay-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ccf715d9ad6ced1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jay-IGW",
            "aws_vpc.jay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jay-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034dd3c794e968539",
            "route_table_id": "rtb-0632294a5ab0b00d3",
            "subnet_id": "subnet-002a364435308a614"
          },
          "dependencies": [
            "aws_internet_gateway.jay-IGW",
            "aws_route_table.jay-pub-RT",
            "aws_subnet.jay-pub-1",
            "aws_vpc.jay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jay-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d29077031a2498b8",
            "route_table_id": "rtb-0632294a5ab0b00d3",
            "subnet_id": "subnet-01807adf89d63dbef"
          },
          "dependencies": [
            "aws_internet_gateway.jay-IGW",
            "aws_route_table.jay-pub-RT",
            "aws_subnet.jay-pub-2",
            "aws_vpc.jay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jay-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925068267029:security-group/sg-0d10e2082959a8e4e",
            "description": "jaytest",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d10e2082959a8e4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "j-stack-sg",
            "name_prefix": "",
            "owner_id": "925068267029",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh"
            },
            "tags_all": {
              "Name": "allow ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ccf715d9ad6ced1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jay-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925068267029:subnet/subnet-0bbd5008af85b8acf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbd5008af85b8acf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925068267029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jay-priv-1"
            },
            "tags_all": {
              "Name": "jay-priv-1"
            },
            "vpc_id": "vpc-00ccf715d9ad6ced1"
          },
          "dependencies": [
            "aws_vpc.jay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jay-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925068267029:subnet/subnet-025052bf112551c42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025052bf112551c42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925068267029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jay-priv-2"
            },
            "tags_all": {
              "Name": "jay-priv-2"
            },
            "vpc_id": "vpc-00ccf715d9ad6ced1"
          },
          "dependencies": [
            "aws_vpc.jay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jay-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925068267029:subnet/subnet-002a364435308a614",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002a364435308a614",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925068267029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jay-pub-1"
            },
            "tags_all": {
              "Name": "jay-pub-1"
            },
            "vpc_id": "vpc-00ccf715d9ad6ced1"
          },
          "dependencies": [
            "aws_vpc.jay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jay-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925068267029:subnet/subnet-01807adf89d63dbef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01807adf89d63dbef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925068267029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jay-pub-2"
            },
            "tags_all": {
              "Name": "jay-pub-2"
            },
            "vpc_id": "vpc-00ccf715d9ad6ced1"
          },
          "dependencies": [
            "aws_vpc.jay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925068267029:vpc/vpc-00ccf715d9ad6ced1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094e4d7089a5b5cc1",
            "default_route_table_id": "rtb-0b16ae67ae80e52e1",
            "default_security_group_id": "sg-028bd83d48f92fe5e",
            "dhcp_options_id": "dopt-0e6447446659ab29e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ccf715d9ad6ced1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b16ae67ae80e52e1",
            "owner_id": "925068267029",
            "tags": {
              "Name": "vprofile"
            },
            "tags_all": {
              "Name": "vprofile"
            }
          }
        }
      ]
    }
  ]
}